# caelyn-agent-backend

./: .gitignore  .replit  api_budget.py  auth.py  config.py  main.py  package.json  pyproject.toml  replit.md  screener_definitions.py  sedUYxzYO
backend/: .replit  =4.1.0  FRONTEND_MACRO_TERMINAL_PROMPT.md  README.md  api_budget.py  auth.py  config.py  fix_main.py  main.py  password_reset.py  pyproject.toml  replit.md  screener_definitions.py  subscription.py  test_xai.py
backend/agent/: claude_agent.py  data_compressor.py  mode_normalizer.py  personality.py  prompts.py
backend/attached_assets/: Pasted--2-01-PM-This-is-a-system-prompt-problem-not-a-data-pro_1771186343354.txt  Pasted--BACKEND-FIX-Portfolio-Quotes-Correct-Ticker-Routing-by_1771297383760.txt  Pasted--Crypto-response-The-AI-took-too-long-to-respond-Please_1773670182856.txt  Pasted--Fix-Best-Investments-budget-exhaustion-only-enriching-_1771521046066.txt  Pasted--Fix-Crypto-momentum-picks-show-N-A-for-7d-change-and-f_1771556850544.txt  Pasted--Fix-Natural-language-fundamental-queries-return-wrong-_1771529393156.txt  Pasted--Fix-Portfolio-Review-returns-502-upgrade-to-full-AI-po_1771530969016.txt  Pasted--Fix-VIX-and-other-indices-still-show-no-price-data-in-_1771537741695.txt  Pasted--HippoAI-Trading-Agent-Full-API-Audit-Optimization-Guid_1771304156730.txt  Pasted--Task-Phase-3-Enhanced-Model-Autonomy-Make-each-AI-mode_1771488010932.txt  Pasted--Three-changes-1-Fix-7d-funding-data-mapping-2-Add-Futu_1771557580635.txt  Pasted--Three-fixes-1-Momentum-picks-missing-structured-data-2_1771564349204.txt  (+63 more)
(+433 files in other folders)
