[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "beautifulsoup4>=4.14.3",
    "bcrypt>=4.0.0",
    "fastapi>=0.129.0",
    "finnhub-python>=2.4.27",
    "fredapi>=0.5.2",
    "httpx>=0.28.1",
    "openai>=2.21.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-jose[cryptography]>=3.3.0",
    "slowapi>=0.1.9",
    "psycopg2-binary>=2.9.0",
    "replit>=4.1.0",
    "replit-object-storage>=1.0.0",
    "uvicorn>=0.40.0",
    "jose>=1.0.0",
    "langsmith>=0.7.0",
]
